--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "blinker==1.7.0",
     "crawl4ai>=0.4.248",
+    "python-dotenv>=1.0.1",
     "selenium>=4.29.0",
+    "selenium-wire>=5.1.0",
+    "setuptools>=75.8.1",
+    "webdriver-manager>=4.0.2",
 ]
