--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "blinker==1.7.0",
     "crawl4ai>=0.4.248",
+    "pandas>=2.2.3",
     "python-dotenv>=1.0.1",
     "selenium>=4.29.0",
     "selenium-wire>=5.1.0",
