--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,7 @@ dependencies = [
     "selenium>=4.29.0",
     "selenium-wire>=5.1.0",
     "setuptools>=75.8.1",
+    "torch>=2.6.0",
+    "transformers>=4.49.0",
     "webdriver-manager>=4.0.2",
 ]
